Added Firebase into the app

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "2.5.7",
     "faker": "4.1.0",
     "firebase": "^7.5.0",
+    "ng2-cloudinary": "^0.9.2",
     "rxjs": "6.2.2",
     "zone.js": "0.8.26"
   },
