--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@angular/platform-browser-dynamic": "6.1.3",
     "@angular/router": "6.1.3",
     "@ngx-pwa/local-storage": "6.1.0",
-    "angularfire2": "^5.2.3",
+    "@syncfusion/ej2-angular-calendars": "17.4.50",
+    "@syncfusion/ej2-buttons": "^17.4.49",
+    "angularfire2": "5.4.2",
     "core-js": "2.5.7",
     "faker": "4.1.0",
-    "firebase": "^7.5.0",
-    "ng2-cloudinary": "^0.9.2",
+    "firebase": "7.8.2",
+    "multiple-date-picker-angular": "3.0.0",
+    "ng2-cloudinary": "0.9.2",
+    "node.js": "0.0.0",
     "rxjs": "6.2.2",
     "zone.js": "0.8.26"
   },
