--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@angular/router": "6.1.3",
     "@ngx-pwa/local-storage": "6.1.0",
     "@syncfusion/ej2-angular-calendars": "17.4.51",
-    "@syncfusion/ej2-buttons": "^17.4.51",
+    "@syncfusion/ej2-buttons": "17.4.51",
     "angularfire2": "5.4.2",
-    "core-js": "2.5.7",
+    "core-js": "2",
     "faker": "4.1.0",
     "firebase": "7.8.2",
     "ng2-cloudinary": "0.9.2",
