--- a/package.json
+++ b/package.json
@@ -3,28 +3,30 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.3",
-    "@angular/cdk": "6.4.5",
-    "@angular/common": "6.1.3",
-    "@angular/compiler": "6.1.3",
-    "@angular/core": "6.1.3",
-    "@angular/flex-layout": "6.0.0-beta.17",
-    "@angular/forms": "6.1.3",
-    "@angular/material": "6.4.5",
-    "@angular/platform-browser": "6.1.3",
-    "@angular/platform-browser-dynamic": "6.1.3",
-    "@angular/router": "6.1.3",
-    "@ngx-pwa/local-storage": "6.1.0",
+    "@angular/animations": "9.0.6",
+    "@angular/cdk": "9.1.2",
+    "@angular/common": "9.0.6",
+    "@angular/compiler": "9.0.6",
+    "@angular/core": "9.0.6",
+    "@angular/flex-layout": "9.0.0-beta.29",
+    "@angular/forms": "9.0.6",
+    "@angular/material": "9.1.2",
+    "@angular/platform-browser": "9.0.6",
+    "@angular/platform-browser-dynamic": "9.0.6",
+    "@angular/router": "9.0.6",
+    "@ngx-pwa/local-storage": "9.0.2",
     "@syncfusion/ej2-angular-calendars": "17.4.51",
     "@syncfusion/ej2-buttons": "17.4.51",
     "angularfire2": "5.4.2",
+    "cdk": "1.27.0",
     "core-js": "2",
     "faker": "4.1.0",
-    "firebase": "7.8.2",
+    "firebase": "7.10.0",
     "ng2-cloudinary": "0.9.2",
     "node.js": "0.0.0",
-    "rxjs": "6.2.2",
-    "zone.js": "0.8.26"
+    "rxjs": "6.5.4",
+    "tslib": "1.11.1",
+    "zone.js": "0.10.2"
   },
   "scripts": {
     "ng": "ng",
